Fix build peek scrollbar visible when no overflow
Closes #999

--- a/app/styles/front.css
+++ b/app/styles/front.css
@@ -12,7 +12,7 @@
 }
 
 .front__builds-wrapper {
-  overflow-x: scroll;
+  overflow-x: auto;
 }
 
 .front__builds-container {
